# psslangserver

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: ci.yml  release.yml  release.yml.bak
etc/: ivpm.info  packages.mf
scripts/: update_copyright.py
src/: FileInfo.cpp  FileInfo.h  FileInfoMarkerCollector.cpp  FileInfoMarkerCollector.h  FileMarkerInfo.cpp  FileMarkerInfo.h  IIndexManagerListener.h  IndexManager.cpp  IndexManager.h  OpenFileInfo.cpp  OpenFileInfo.h  PSSLangServer.cpp  PSSLangServer.h  Path.cpp  Path.h  URI.cpp  URI.h  WorkspaceFolderInfo.cpp  WorkspaceFolderInfo.h  psslangserver_main.cpp
